--- a/public/themes/simpleboot3/public/nav.html
+++ b/public/themes/simpleboot3/public/nav.html
@@ -76,13 +76,13 @@
 <!--</nav>-->
 <div class="header">
     <div class="inner">
-        <div class="logo"><h1><a href="#" class="" ><img src="__TMPL__/public/assets/images/logo.png" alt="" /></a></h1></div>
+        <div class="logo"><h1><a href="{:cmf_url('portal/Index/index')}" class="" ><img src="__TMPL__/public/assets/images/logo.png" alt="" /></a></h1></div>
         <div class="nav">
             <ul class="navul">
                 <li class="cur"><a href="{:cmf_url('portal/Index/index')}" target="_blank">首  页</a></li>
                 <li><a href="{:cmf_url('portal/List/index')}" target="_blank">诗歌歌曲 </a></li>
-                <li><a href="#" target="_blank">诗歌源考 </a></li>
-                <li><a href="#" target="_blank">诗歌赏析 </a></li>
+                <li><a href="{:cmf_url('portal/Allusionlist/index')}" target="_blank">诗歌源考 </a></li>
+                <li><a href="{:cmf_url('portal/Appreciationlist/index')}" target="_blank">诗歌赏析 </a></li>
                 <li><a href="{:cmf_url('portal/Ramshow/index')}" target="_blank">诗歌漫谈 </a></li>
                 <li><a href="{:cmf_url('portal/Poetlist/index')}" target="_blank">诗人小传 </a></li>
             </ul>
